<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:background="@drawable/hacker_code_background">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUp">

    <EditText
        android:id="@+id/SignUp_LastNameInputField"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="Last Name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SignUp_FirstNameInputField"
        app:layout_constraintTop_toTopOf="@+id/SignUp_FirstNameInputField"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/SignUp_TopBanner"
        android:layout_width="393dp"
        android:layout_height="132dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/sign_up_menu_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_BackButton"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/SignUp_EmailInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_TopBanner"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_UsernameInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_EmailInputField"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_FirstNameInputField"
        android:layout_width="148dp"
        android:layout_height="43dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="First Name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_UsernameInputField"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_PasswordInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_FirstNameInputField"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_ConfirmPasswordInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_PasswordInputField"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_SecurityQuestionInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/security_question"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_ConfirmPasswordInputField"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/SignUp_SecurityQuestionAnswerInputField"
        android:layout_width="229dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="#E6FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/security_question_answer"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="1dp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_SecurityQuestionInputField"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/SignUp_CreateAccountButtonImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/create_account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_SecurityQuestionAnswerInputField"
        app:layout_constraintVertical_bias="0.531"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/SignUp_CreateAccountButton"
        android:layout_width="299dp"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:text=""
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SignUp_SecurityQuestionAnswerInputField" />

    <ImageButton
        android:id="@+id/SignUp_BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:src="@android:drawable/btn_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

</android.support.constraint.ConstraintLayout>
</ScrollView>